issue-20 [Currency] - Remove RON and add MDL into supported currency list
changed

--- a/ro_help/hub/templates/ngo/detail.html
+++ b/ro_help/hub/templates/ngo/detail.html
@@ -38,7 +38,7 @@
             <div class="column is-5">
             </div>
             <div class="column is-3">
-                <b>{{donations.1}}</b> {% trans "RON donated" %}
+                <b>{{donations.1}}</b> {% trans "MDL donated" %}
             </div>
         </div>
     {% endif %}
@@ -93,7 +93,7 @@
                             <div class="columns is-mobile">
                                 <div class="column is-two-thirds-desktop is-half-mobile">
                                     <div class="control">
-                                        <input class="input is-success" name="amount" type="text" placeholder="100 RON">
+                                        <input class="input is-success" name="amount" type="text" placeholder="100 MDL">
                                     </div>
                                 </div>
                                 <div class="column is-one-third-desktop is-half-mobile">
@@ -237,7 +237,7 @@
                         <tr>
                             <th>{% trans "Firstname" %}</th>
                             <th>{% trans "Lastname" %}</th>
-                            <th>{% trans "Sum (RON)" %}</th>
+                            <th>{% trans "Sum (MDL)" %}</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -289,7 +289,7 @@
                         <tr>
                             <th>{% trans "Date" %}</th>
                             <th>{% trans "Title" %}</th>
-                            <th>{% trans "Sum (RON)" %}</th>
+                            <th>{% trans "Sum (MDL)" %}</th>
                         </tr>
                     </thead>
                     <tbody>
