--- a/ro_help/hub/templates/ngo/register_request.html
+++ b/ro_help/hub/templates/ngo/register_request.html
@@ -11,32 +11,48 @@
 {% endblock extra-header %}
 
 {% block left-side-view %}
+<div class="columns">
+    <div class="column is-two-third">
+        <div class="container">
+            {% if messages %}
+                <article class="message is-success">
+                <div class="message-body">
+                    {% for message in messages %}
+                        {{ message }}
+                    {% endfor %}
+                </div>
+                </article>
+            {% else %}
+                <form method="post" enctype="multipart/form-data" >
+                    {% csrf_token %}
 
-<div class="container">
-    {% if messages %}
-        <article class="message is-success">
-        <div class="message-body">
-            {% for message in messages %}
-                {{ message }}
-            {% endfor %}
-        </div>    
-        </article>
-    {% else %}
-        <form method="post" enctype="multipart/form-data" >
-            {% csrf_token %}
+                    {{ form.non_field_errors }}
 
-            {{ form.non_field_errors }}
+                    {% for hidden_field in form.hidden_fields %}
+                        {{ hidden_field.errors }}
+                        {{ hidden_field }}
+                    {% endfor %}
 
-            {% for hidden_field in form.hidden_fields %}
-                {{ hidden_field.errors }}
-                {{ hidden_field }}
-            {% endfor %}
+                    {{ form|crispy }}
 
-            {{ form|crispy }}
+                    <input class="button is-success" type="submit" value="TRIMITE">
+                </form>
+            {% endif %}
+        </div>
+    </div>
+    <div class="column is-one-third">
+        <div class="is-flex" style="background-color: #ffd738; padding: 2em; justify-content: center; margin-bottom: 1em;">
+            <div class="is-flex" style="flex-direction:column">
+                here should be the sidebar registration
 
-            <input class="button is-success" type="submit" value="TRIMITE">
-        </form>
-    {% endif %}
+            </div>
+        </div>
+    </div>
 </div>
+
+{% endblock %}
+
+{% block right-side-view %}
+
 {% endblock %}
 
