--- a/ro_help/hub/templates/sidebar.html
+++ b/ro_help/hub/templates/sidebar.html
@@ -1,9 +1,23 @@
 {% load static %}
 {% load i18n %}
 
-<div class="is-flex" style="background-color: #ffd738; padding: 2em; justify-content: center; margin-bottom: 1em;">
-    <div class="is-flex" style="flex-direction:column">
-        here should be the sidebar simple pages
+<aside>
+	<div class="part-one">
+		<h3>Un proiect dezvoltat de:</h3>
+		<img src="/static/images/sidebar/ModelforMoldova.png" alt="">
+	</div>
 
-    </div>
-</div>
+	<div class="part-two">
+		<h3>în parteneriat cu:</h3>
+		<img src="/static/images/sidebar/CodeforRomania.png" alt="">
+		<img src="/static/images/sidebar/BST.png" alt="">
+	</div>
+
+	<div class="part-three">
+		<h3>Parteneri media:</h3>
+		<div class="media"></div>
+		<div class="media"></div>
+		<div class="media"></div>
+	</div>
+
+</aside>
