--- a/ro_help/hub/templates/about.html
+++ b/ro_help/hub/templates/about.html
@@ -11,9 +11,9 @@
         <section class="column is-three-quarters">
             <h1>Despre ajut.md</h1>
             <ul>
-                <li>Este o platformă de donatii dezvoltatâ de <strong>AO Code for Moldova</strong>. Scopul inițativei este de a facilita conexinnea Mntre donaton şi organisațiile care au nevoie de: <strong>bani</strong>, <strong>burnuri</strong> şi <strong>voluntari.</strong></li>
+                <li>Este o platformă de donații dezvoltată de <strong>AO Code for Moldova</strong>. Scopul inițativei este de a facilita conexinnea dintre donatori şi organizațiile care au nevoie de: <strong>bani</strong>, <strong>bunuri</strong> şi <strong>voluntari.</strong></li>
                 <li>Este disponibilă tuturor asociațiilor şi fundațiilor înregistrate conform legislației Republicii Moldova şi care derulează în interesul comunității.</li>
-                <li>Este un proiect realizat prin efortul voluntarilor și al echipei Code for Moldova, organizație neguvernamentală independentă și neafiliată plitic.</li>
+                <li>Este un proiect realizat prin efortul voluntarilor și al echipei Code for Moldova, organizație neguvernamentală independentă și neafiliată politic.</li>
             </ul>
             <div class="illustration">
                 <img src="/static/images/sidebar/illustration.png" alt="ajut.md">
