--- a/ro_help/static/css/hub.css
+++ b/ro_help/static/css/hub.css
@@ -494,6 +494,10 @@ footer {
     color: #6B6B6B;
 }
 
+.asterisk {
+    color: red;
+}
+
 .registration-form {
     width: 510px;
     background-color: white;
