--- a/ro_help/hub/templates/ngo/base.html
+++ b/ro_help/hub/templates/ngo/base.html
@@ -22,58 +22,67 @@
 
 <div class="container">
     {% block extra-header %}
-        <div id="donate_safely" class="container">
-            <h1 class="donate-title">
-                {% trans "Welcome to RoHelp" %}
-            </h1>
-            <p class="donate-subtitle">
-                {% trans "RoHelp is a fully-featured digital platform which lends itself to be used by all organizations which are actively involved in halting the spread of Covid-19. The main purpose of the paltform is to help organizations collect the resources they need. As a user, the platform will help you find the most pressing needs that organizations face across the country. As a result, it makes it easy for you to chose the cause you donate to, or the efforts you contribute to." %}
-            </p>
-        </div>
+        <div id="donate_safely" class="container welcome">
+            <div class="welcome-top">
+                <div class="left">
+                    <h1 class="donate-title">
+                        {% trans "Welcome to RoHelp" %}
+                    </h1>
+                    <p class="donate-subtitle">
+                        {% trans "RoHelp is a fully-featured digital platform which lends itself to be used by all organizations which are actively involved in halting the spread of Covid-19. The main purpose of the paltform is to help organizations collect the resources they need. As a user, the platform will help you find the most pressing needs that organizations face across the country. As a result, it makes it easy for you to chose the cause you donate to, or the efforts you contribute to." %}
+                    </p>
+                </div>
+                <div class="right">
+                    <img src="{% static "images/help.svg" %}" alt="Help">
+                </div>
+            </div>
 
+            <div class="resource-filters">
+                <div class="columns is-multiline">
+                    <div class="column filter {% if current_kind == 'money' %}active{% else%}{% endif %}">
+                        <a href="{% spurl base='{{ current_url }}' set_query='kind=money' remove_query_param='page' %}">
+                            <svg class="fill" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M6 11C5.80222 11 5.60888 11.0586 5.44443 11.1685C5.27998 11.2784 5.15181 11.4346 5.07612 11.6173C5.00043 11.8 4.98063 12.0011 5.01921 12.1951C5.0578 12.3891 5.15304 12.5673 5.29289 12.7071C5.43275 12.847 5.61093 12.9422 5.80491 12.9808C5.99889 13.0194 6.19996 12.9996 6.38268 12.9239C6.56541 12.8482 6.72159 12.72 6.83147 12.5556C6.94135 12.3911 7 12.1978 7 12C7 11.7348 6.89464 11.4804 6.70711 11.2929C6.51957 11.1054 6.26522 11 6 11ZM18 11C17.8022 11 17.6089 11.0586 17.4444 11.1685C17.28 11.2784 17.1518 11.4346 17.0761 11.6173C17.0004 11.8 16.9806 12.0011 17.0192 12.1951C17.0578 12.3891 17.153 12.5673 17.2929 12.7071C17.4327 12.847 17.6109 12.9422 17.8049 12.9808C17.9989 13.0194 18.2 12.9996 18.3827 12.9239C18.5654 12.8482 18.7216 12.72 18.8315 12.5556C18.9414 12.3911 19 12.1978 19 12C19 11.7348 18.8946 11.4804 18.7071 11.2929C18.5196 11.1054 18.2652 11 18 11ZM20 5H4C3.20435 5 2.44129 5.31607 1.87868 5.87868C1.31607 6.44129 1 7.20435 1 8V16C1 16.7956 1.31607 17.5587 1.87868 18.1213C2.44129 18.6839 3.20435 19 4 19H20C20.7956 19 21.5587 18.6839 22.1213 18.1213C22.6839 17.5587 23 16.7956 23 16V8C23 7.20435 22.6839 6.44129 22.1213 5.87868C21.5587 5.31607 20.7956 5 20 5ZM21 16C21 16.2652 20.8946 16.5196 20.7071 16.7071C20.5196 16.8946 20.2652 17 20 17H4C3.73478 17 3.48043 16.8946 3.29289 16.7071C3.10536 16.5196 3 16.2652 3 16V8C3 7.73478 3.10536 7.48043 3.29289 7.29289C3.48043 7.10536 3.73478 7 4 7H20C20.2652 7 20.5196 7.10536 20.7071 7.29289C20.8946 7.48043 21 7.73478 21 8V16ZM12 9C11.4067 9 10.8266 9.17595 10.3333 9.50559C9.83994 9.83524 9.45542 10.3038 9.22836 10.8519C9.0013 11.4001 8.94189 12.0033 9.05764 12.5853C9.1734 13.1672 9.45912 13.7018 9.87868 14.1213C10.2982 14.5409 10.8328 14.8266 11.4147 14.9424C11.9967 15.0581 12.5999 14.9987 13.1481 14.7716C13.6962 14.5446 14.1648 14.1601 14.4944 13.6667C14.8241 13.1734 15 12.5933 15 12C15 11.2044 14.6839 10.4413 14.1213 9.87868C13.5587 9.31607 12.7956 9 12 9ZM12 13C11.8022 13 11.6089 12.9414 11.4444 12.8315C11.28 12.7216 11.1518 12.5654 11.0761 12.3827C11.0004 12.2 10.9806 11.9989 11.0192 11.8049C11.0578 11.6109 11.153 11.4327 11.2929 11.2929C11.4327 11.153 11.6109 11.0578 11.8049 11.0192C11.9989 10.9806 12.2 11.0004 12.3827 11.0761C12.5654 11.1518 12.7216 11.28 12.8315 11.4444C12.9414 11.6089 13 11.8022 13 12C13 12.2652 12.8946 12.5196 12.7071 12.7071C12.5196 12.8946 12.2652 13 12 13Z"/>
+                            </svg>
+
+                            {% trans "I want to help with money" %}
+                        </a>
+                    </div>
+
+                    <div class="column filter {% if current_kind == 'resource' %}active{% else%}{% endif %}">
+                        <a href="{% spurl base='{{ current_url }}' set_query='kind=resource' remove_query_param='page' %}">
+                            <svg class="stroke" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M16.5 9.4L7.5 4.21" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M21 16V8C20.9996 7.64928 20.9071 7.30481 20.7315 7.00116C20.556 6.69752 20.3037 6.44536 20 6.27L13 2.27C12.696 2.09446 12.3511 2.00205 12 2.00205C11.6489 2.00205 11.304 2.09446 11 2.27L4 6.27C3.69626 6.44536 3.44398 6.69752 3.26846 7.00116C3.09294 7.30481 3.00036 7.64928 3 8V16C3.00036 16.3507 3.09294 16.6952 3.26846 16.9988C3.44398 17.3025 3.69626 17.5546 4 17.73L11 21.73C11.304 21.9055 11.6489 21.998 12 21.998C12.3511 21.998 12.696 21.9055 13 21.73L20 17.73C20.3037 17.5546 20.556 17.3025 20.7315 16.9988C20.9071 16.6952 20.9996 16.3507 21 16Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M3.27 6.96L12 12.01L20.73 6.96" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M12 22.08V12" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            {% trans "I want to help with resources" %}
+                        </a>
+                    </div>
+
+                    <div class="column filter {% if current_kind == 'volunteer' %}active{% else%}{% endif %}">
+                        <a href="{% spurl base='{{ current_url }}' set_query='kind=volunteer' remove_query_param='page' %}">
+                            <svg class="fill" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_103:64)">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5 21C16.5 21 18 21 18 19.5C18 18 16.5 13.5 9 13.5C1.5 13.5 0 18 0 19.5C0 21 1.5 21 1.5 21H16.5ZM1.5075 19.584V19.581V19.584ZM1.533 19.5H16.467C16.474 19.4992 16.481 19.4982 16.488 19.497L16.5 19.494C16.4985 19.125 16.269 18.015 15.252 16.998C14.274 16.02 12.4335 15 9 15C5.565 15 3.726 16.02 2.748 16.998C1.731 18.015 1.503 19.125 1.5 19.494C1.51098 19.4961 1.52198 19.4981 1.533 19.5ZM16.494 19.584V19.581V19.584ZM9 10.5C9.79565 10.5 10.5587 10.1839 11.1213 9.62132C11.6839 9.05871 12 8.29565 12 7.5C12 6.70435 11.6839 5.94129 11.1213 5.37868C10.5587 4.81607 9.79565 4.5 9 4.5C8.20435 4.5 7.44129 4.81607 6.87868 5.37868C6.31607 5.94129 6 6.70435 6 7.5C6 8.29565 6.31607 9.05871 6.87868 9.62132C7.44129 10.1839 8.20435 10.5 9 10.5ZM13.5 7.5C13.5 8.69347 13.0259 9.83807 12.182 10.682C11.3381 11.5259 10.1935 12 9 12C7.80653 12 6.66193 11.5259 5.81802 10.682C4.97411 9.83807 4.5 8.69347 4.5 7.5C4.5 6.30653 4.97411 5.16193 5.81802 4.31802C6.66193 3.47411 7.80653 3 9 3C10.1935 3 11.3381 3.47411 12.182 4.31802C13.0259 5.16193 13.5 6.30653 13.5 7.5ZM23.781 7.719C23.8508 7.78867 23.9063 7.87143 23.9441 7.96255C23.9819 8.05367 24.0013 8.15135 24.0013 8.25C24.0013 8.34865 23.9819 8.44633 23.9441 8.53745C23.9063 8.62857 23.8508 8.71133 23.781 8.781L19.281 13.281C19.2113 13.3508 19.1286 13.4063 19.0374 13.4441C18.9463 13.4819 18.8487 13.5013 18.75 13.5013C18.6513 13.5013 18.5537 13.4819 18.4626 13.4441C18.3714 13.4063 18.2887 13.3508 18.219 13.281L15.969 11.031C15.8282 10.8902 15.7491 10.6992 15.7491 10.5C15.7491 10.3008 15.8282 10.1098 15.969 9.969C16.1098 9.82817 16.3008 9.74905 16.5 9.74905C16.6992 9.74905 16.8902 9.82817 17.031 9.969L18.75 11.6895L22.719 7.719C22.7887 7.64916 22.8714 7.59374 22.9626 7.55593C23.0537 7.51812 23.1513 7.49866 23.25 7.49866C23.3487 7.49866 23.4463 7.51812 23.5374 7.55593C23.6286 7.59374 23.7113 7.64916 23.781 7.719Z" />
+                                </g>
+                                <defs>
+                                <clipPath id="clip0_103:64">
+                                    <rect width="24" height="24"/>
+                                </clipPath>
+                                </defs>
+                                </svg>
+
+                            {% trans "I want to volunteer" %}
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     {% endblock %}
 
     {% block kind-kind-filters %}
-
-    <div id="aid_types" class="container">
-        <div class="columns is-multiline">
-            <div class="column is-4 filter">
-                <div class="{% if current_kind == 'money' %}card-active{% else%}card{% endif %}">
-                    <a href="{% spurl base='{{ current_url }}' set_query='kind=money' remove_query_param='page' %}"
-                       class="has-text-black is-flex">
-                        <span class="call-to-action" style="background-color: #bfd1e3;">
-                            <i class="far fa-check-circle"></i>
-                        </span>
-                        <div class="card-content">{% trans "I want to help with money" %}</div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="column is-4 filter">
-                <div class="{% if current_kind == 'resource' %}card-active{% else%}card{% endif %}">
-                    <a href="{% spurl base='{{ current_url }}' set_query='kind=resource' remove_query_param='page' %}"
-                       class="is-flex has-text-black">
-                        <span class="call-to-action" style="background-color: #bfd1e3;">
-                         <i class="far fa-check-circle"></i>
-                        </span>
-                        <div class="card-content">{% trans "I want to help with resources" %}</div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="column is-4 filter">
-                <div class="{% if current_kind == 'volunteer' %}card-active{% else%}card{% endif %}">
-                    <a href="{% spurl base='{{ current_url }}' set_query='kind=volunteer' remove_query_param='page' %}"
-                       class="is-flex has-text-black">
-                         <span class="call-to-action" style="background-color: #bfd1e3;">
-                            <i class="far fa-check-circle"></i>
-                         </span>
-                        <div class="card-content">{% trans "I want to volunteer" %}</div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
     {% endblock %}
 
     <div class="columns">
